--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,12 @@
     "dev": "ts-node-dev --transpile-only src/server.ts"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.0",
+    "prisma-erd-generator": "^1.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
